--- a/ilha3.html
+++ b/ilha3.html
@@ -159,7 +159,7 @@
 </body>
 <footer>
   <img class="logof" src="imgIlha3/LogoA.png" alt="logo">
-  <a class="linkedin" href="https://www.linkedin.com/in/marianarodriguesprofissional/"><img src="imgIlha3/Mariana.png">
+  <a class="linkedin" href=""><img src="imgIlha3/Mariana.png">
 </footer>
 
 </html>
